<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- =========================================================================================================== -->
    <!-- Project information -->
    <groupId>org.royllo.explorer</groupId>
    <artifactId>explorer</artifactId>
    <version>0.2.3-SNAPSHOT</version>
    <name>Royllo - A Taproot asset explorer</name>
    <description>Royllo explorer allows you to search for Taproot assets created on the Bitcoin blockchain</description>
    <packaging>pom</packaging>
    <url>https://github.com/royllo/explorer</url>
    <licenses>
        <license>
            <name>GNU General Public License v3.0</name>
            <url>https://github.com/royllo/explorer/blob/development/LICENSE</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <!-- =========================================================================================================== -->

    <!-- =========================================================================================================== -->
    <!-- Developers -->
    <developers>
        <developer>
            <id>straumat</id>
            <email>stephane.traumat@gmail.com</email>
            <name>Stéphane Traumat</name>
            <url>https://github.com/straumat</url>
        </developer>
    </developers>
    <!-- =========================================================================================================== -->

    <!-- =========================================================================================================== -->
    <!-- Source Code Management -->
    <scm>
        <url>https://github.com/royllo/explorer</url>
        <connection>scm:git:git://github.com/royllo/explorer.git</connection>
        <developerConnection>scm:git:git@github.com:royllo/explorer.git</developerConnection>
    </scm>
    <!-- =========================================================================================================== -->

    <!-- =========================================================================================================== -->
    <!-- Issues -->
    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/royllo/explorer/issues</url>
    </issueManagement>
    <!-- =========================================================================================================== -->

    <!-- =========================================================================================================== -->
    <!-- Project configuration -->
    <properties>
        <!-- ======================================================================================================= -->
        <!-- Java build configuration -->
        <java.version>21</java.version>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.source>21</maven.compiler.source>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- ======================================================================================================= -->
        <!-- Project libraries -->
        <spring.version>3.2.2</spring.version>

        <graphql-dgs-platform-dependencies.version>8.3.0</graphql-dgs-platform-dependencies.version>
        <graphql-dgs-codegen-core.version>6.1.4</graphql-dgs-codegen-core.version>
        <graphql-dgs-codegen-client-core.version>5.1.17</graphql-dgs-codegen-client-core.version>

        <liquibase.version>4.26.0</liquibase.version>
        <jdbc.driver.hsqldb.version>2.7.2</jdbc.driver.hsqldb.version>
        <jdbc.driver.postgresql.version>42.7.1</jdbc.driver.postgresql.version>

        <lombok.version>1.18.30</lombok.version>
        <lombok.mapstruct.version>0.2.0</lombok.mapstruct.version>
        <mapstruct.version>1.5.5.Final</mapstruct.version>

        <tika-core.version>2.9.1</tika-core.version>

        <!-- ======================================================================================================= -->
        <!-- Cloud libraries -->
        <minio.version>8.5.8</minio.version>
        <jimfs.version>1.3.0</jimfs.version>
        <undertow.version>2.3.10.Final</undertow.version>

        <!-- ======================================================================================================= -->
        <!-- Web libraries -->
        <bucket4j-core.version>8.8.0</bucket4j-core.version>
        <caffeine.version>3.1.8</caffeine.version>

        <thymeleaf-layout-dialect.version>3.3.0</thymeleaf-layout-dialect.version>
        <htmx-spring-boot-thymeleaf.version>3.2.0</htmx-spring-boot-thymeleaf.version>
        <bitcoin-spring-boot-starter.version>0.12.0</bitcoin-spring-boot-starter.version>

        <webjars-locator.version>0.50</webjars-locator.version>
        <htmx.version>1.9.10</htmx.version>
        <alpinejs.version>3.13.5</alpinejs.version>

        <!-- ======================================================================================================= -->
        <!-- Test libraries -->
        <testcontainers.version>1.19.5</testcontainers.version>
        <mockito-core.version>5.10.0</mockito-core.version>
        <okhttp.version>5.0.0-alpha.12</okhttp.version>

        <!-- ======================================================================================================= -->
        <!-- Maven plugins -->
        <maven.checkstyle.plugin.version>3.3.1</maven.checkstyle.plugin.version>
        <maven.graphqlcodegen.plugin.version>1.60.0</maven.graphqlcodegen.plugin.version>
        <maven.puppycrawl.checkstyle.version>10.13.0</maven.puppycrawl.checkstyle.version>
        <maven.compiler.plugin.version>3.12.1</maven.compiler.plugin.version>

        <maven.source.plugin.version>3.3.0</maven.source.plugin.version>
        <maven.resources.plugin.version>3.3.1</maven.resources.plugin.version>
        <maven.javadoc.plugin.version>3.6.3</maven.javadoc.plugin.version>
        <maven.jar.plugin.version>3.3.0</maven.jar.plugin.version>
        <maven.archetype-packaging.version>3.2.1</maven.archetype-packaging.version>

        <frontend-maven-plugin.version>1.15.0</frontend-maven-plugin.version>
        <frontend-maven-plugin.nodeVersion>v20.10.0</frontend-maven-plugin.nodeVersion>
        <frontend-maven-plugin.npmVersion>10.2.3</frontend-maven-plugin.npmVersion>
    </properties>
    <!-- =========================================================================================================== -->

    <!-- =========================================================================================================== -->
    <!-- Modules -->
    <modules>

        <!-- Libraries -->
        <module>util/test/common-test</module>

        <!-- Core services -->
        <module>backend/explorer-core/autoconfigure</module>
        <module>backend/explorer-core/starter</module>

        <!-- Servers -->
        <module>backend/servers/explorer-batch</module>
        <module>backend/servers/explorer-api</module>
        <module>backend/servers/explorer-web</module>

    </modules>
    <!-- =========================================================================================================== -->

    <!-- =========================================================================================================== -->
    <!-- Build configuration -->
    <build>
        <!-- Plugins -->
        <plugins>
            <!-- Release plugin -->
            <plugin>
                <groupId>com.amashchenko.maven.plugin</groupId>
                <artifactId>gitflow-maven-plugin</artifactId>
                <version>1.21.0</version>
                <configuration>
                    <gitFlowConfig>
                        <productionBranch>production</productionBranch>
                        <developmentBranch>development</developmentBranch>
                    </gitFlowConfig>
                    <commitMessages>
                        <featureStartMessage>Update versions for feature branch</featureStartMessage>
                        <featureFinishMessage>Update versions for development branch</featureFinishMessage>
                        <hotfixStartMessage>Update versions for hotfix</hotfixStartMessage>
                        <hotfixFinishMessage>Update for next development version</hotfixFinishMessage>
                        <releaseStartMessage>Update versions for release</releaseStartMessage>
                        <releaseFinishMessage>Update for next development version</releaseFinishMessage>
                        <tagHotfixMessage>Tag hotfix</tagHotfixMessage>
                        <tagReleaseMessage>Tag release</tagReleaseMessage>
                    </commitMessages>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <!-- =========================================================================================================== -->

    <!-- =========================================================================================================== -->
    <!-- Spring boot -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.2</version>
        <relativePath/>
    </parent>
    <!-- =========================================================================================================== -->

</project>